Fix nav button center alignment

--- a/main.css
+++ b/main.css
@@ -135,6 +135,9 @@ header img::after {
 }
 
 header .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
   text-shadow: 1px 1px 4px rgba(0,0,0,0.2), 0 0 90px rgba(0,0,0,0.5);
   z-index: 1;
